--- a/public/back/login.html
+++ b/public/back/login.html
@@ -17,15 +17,15 @@
             <div class="panel-body">
                 <form class="form-horizontal">
                     <div class="form-group">
-                        <label for="usename" class="col-sm-3 control-label">用户名</label>
+                        <label for="username" class="col-sm-3 control-label">用户名</label>
                         <div class="col-sm-9">
-                            <input type="email" class="form-control" id="usename" placeholder="请输入用户名">
+                            <input type="text" autocomplete="off" name="username" class="form-control" id="username" placeholder="请输入用户名">
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="password" class="col-sm-3 control-label">密码</label>
                         <div class="col-sm-9">
-                            <input type="password" class="form-control" id="password" placeholder="请输入密码">
+                            <input type="password" name="password" class="form-control" id="password" placeholder="请输入密码">
                         </div>
                     </div>
                     <div class="form-group">
