首页完成，其余的共同部分完成

--- a/public/back/first.html
+++ b/public/back/first.html
@@ -11,7 +11,7 @@
 <body>
     <div class="lt-side">
         <div class="brand">
-            <a href="#">
+            <a href="index.html">
                 黑马18期
             </a>
         </div>
@@ -22,7 +22,7 @@
         <div class="nav">
             <ul>
                 <li>
-                    <a href="user.html">
+                    <a class="now" href="#">
                         <span class="glyphicon glyphicon-user"></span>
                         用户管理
                     </a>
@@ -33,12 +33,12 @@
                         分类管理
                     </a>
                     <div class="sencond">
-                        <a href="first.html">一级分类</a>
-                        <a href="second.html">二级分类</a>
+                        <a href="#">一级分类</a>
+                        <a href="#">二级分类</a>
                     </div>
                 </li>
                 <li>
-                    <a href="product.html">
+                    <a href="#">
                         <span class="glyphicon glyphicon-tags"></span>
                         商品管理
                     </a>
