--- a/public/back/second.html
+++ b/public/back/second.html
@@ -22,7 +22,7 @@
         <div class="nav">
             <ul>
                 <li>
-                    <a class="now" href="#">
+                    <a href="#">
                         <span class="glyphicon glyphicon-user"></span>
                         用户管理
                     </a>
@@ -32,9 +32,9 @@
                         <span class='glyphicon glyphicon-list'></span>
                         分类管理
                     </a>
-                    <div class="sencond">
+                    <div class="sencond" style="display: block">
                         <a href="#">一级分类</a>
-                        <a href="#">二级分类</a>
+                        <a href="#" class="now" >二级分类</a>
                     </div>
                 </li>
                 <li>
@@ -52,7 +52,7 @@
                 <span class="glyphicon glyphicon-align-justify"></span>
             </a>
             <a href="#" class="pull-right">
-                <span class="glyphicon glyphicon-log-out"></span>
+                <span class="glyphicon glyphicon-log-out login_out"></span>
             </a>
         </div>
         <div class="container-fluid">
@@ -61,19 +61,147 @@
                 <li><a href="#">首页</a></li>
                 <!--<li class="active">Data</li>-->
             </ol>
-            <div class="char1 pull-left"></div>
-            <div class="char2 pull-right"></div>
+
+            <div class="content">
+                <button class="mb_20 btn btn-default add">添加分类</button>
+                <div class=" ">
+                    <table class="text-center table table-bordered table-hover">
+                        <thead>
+                        <tr>
+                            <td>序号</td>
+                            <td>一级分类名称</td>
+                            <td>二级分类名称</td>
+                            <td>二级分类LOGO</td>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>root</td>
+                            <td>121324354667</td>
+                            <td>
+                                <img width="50px" height="50px" src="images/suiyue.jpg" alt="">
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <div class="page">
+                    <ul id="pagintor"></ul>
+                </div>
+            </div>
         </div>
 
+    </div>
+
+
+
+
+    <div class="modal fade" tabindex="-1" id="logoutModal">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+                    <h4 class="modal-title">温馨提示</h4>
+                </div>
+                <div class="modal-body">
+                    <p class="text-danger">
+                        <span class="glyphicon glyphicon-info-sign"></span>
+                        您确定要退出后台管理系统吗？
+                    </p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                    <button type="button" class="btn btn-primary btn_logout">退出</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+    <div class="modal fade" tabindex="-1" id="addModal">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+                    <h4 class="modal-title">添加分类</h4>
+                </div>
+                <form id="form">
+                    <div class="modal-body">
+                        <div class="form-group">
+
+                        <div class="dropdown">
+                            <button id="dLabel" class="btn btn-default " type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                 请选择一级分类
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" aria-labelledby="dLabel">
+                                <li><a href="#">suiyue</a></li>
+                                <li><a href="#">suiyue</a></li>
+                                <li><a href="#">suiyue</a></li>
+                                <li><a href="#">suiyue</a></li>
+                                <li><a href="#">suiyue</a></li>
+                            </ul>
+                        </div>
+                            <input type="hidden" name="categoryId">
+                        </div>
+
+                        <div class="form-group">
+                            <input type="text" class="form-control" name="categoryName" placeholder="请输入二级分类的名称">
+                        </div>
+                        <div class="form-group">
+                            <div class="fileupload">
+                                <button class="btn btn-default">上传图片</button>
+                                <input type="file" id="uploadfile" name="pic1" class="btn btn-default">
+                            </div>
+                        </div>
+                        <div class="form-group img_box">
+                            <img src="images/none.png" width="100px" height="100px" alt="">
+                            <input type="hidden" name="brandLogo">
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                        <button type="submit" form="form" class="btn btn-primary">添加</button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
 </body>
 </html>
 
 
+<script type="text/template" id="temp_second">
+{{each rows v i }}
+
+<tr>
+    <td>{{(page - 1)*size + 1 + i}}</td>
+    <td>{{v.categoryName}}</td>
+    <td>{{v.brandName}}</td>
+    <td>
+        <img width="50px" height="50px" src="{{v.brandLogo}}" alt="">
+    </td>
+</tr>
+    {{ /each}}
+</script>
+
+
+<script type="text/template" id="temp_category">
+{{ each rows v i}}
+        <li><a data-id="{{v.id}}" href="#">{{v.categoryName}}</a></li>
+    {{ /each }}
+</script>
+
+
 <script src="lib/jquery/jquery.min.js"></script>
 <script src="lib/bootstrap/js/bootstrap.min.js"></script>
 <script src="lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
-<script src="lib/echarts/echarts.min.js"></script>
 <script src="lib/nprogress/nprogress.js"></script>
+<script src="lib/bootstrap-paginator/bootstrap-paginator.min.js"></script>
+<script src="lib/artTemplate/template-web.js"></script>
 <script src="js/common.js"></script>
-<script src="js/index.js"></script>
+<script src="js/second.js"></script>
