--- a/public/back/user.html
+++ b/public/back/user.html
@@ -52,7 +52,7 @@
                 <span class="glyphicon glyphicon-align-justify"></span>
             </a>
             <a href="#" class="pull-right">
-                <span class="glyphicon glyphicon-log-out"></span>
+                <span class="glyphicon glyphicon-log-out login_out"></span>
             </a>
         </div>
         <div class="container-fluid">
@@ -61,19 +61,108 @@
                 <li><a href="#">首页</a></li>
                 <!--<li class="active">Data</li>-->
             </ol>
-            <div class="char1 pull-left"></div>
-            <div class="char2 pull-right"></div>
+
+            <div class=" ">
+                <table class="text-center table table-bordered table-hover">
+                    <thead>
+                        <tr>
+                            <td>序号</td>
+                            <td>用户名</td>
+                            <td>手机号</td>
+                            <td>状态</td>
+                            <td>操作</td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>root</td>
+                            <td>121324354667</td>
+                            <td>正常</td>
+                            <td>
+                                <button class="btn  btn-danger btn-sm">禁用</button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="page">
+                <ul id="pagintor" class="pull-right"></ul>
+            </div>
         </div>
 
     </div>
+
+
+<!--模态框-->
+    <div class="modal fade" tabindex="-1" id="logoutModal">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+                    <h4 class="modal-title">温馨提示</h4>
+                </div>
+                <div class="modal-body">
+                    <p class="text-danger">
+                        <span class="glyphicon glyphicon-info-sign"></span>
+                        您确定要退出后台管理系统吗？
+                    </p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                    <button type="button" class="btn btn-primary btn_logout">退出</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script type="text/template" id="temp">
+        {{each rows v i}}
+        <tr>
+            <td>{{(page - 1)*size + i + 1}}</td>
+            <td>{{v.username}}</td>
+            <td>{{v.mobile}}</td>
+            <td>{{v.isDelete?"正常":"禁用" }}</td>
+            <td>
+                {{if v.isDelete == 0}}
+                <button class="btn  btn-success btn-sm">启用</button>
+                {{else if v.isDelete == 1}}
+                <button class="btn  btn-danger btn-sm">禁用</button>
+                {{/if }}
+            </td>
+        </tr>
+        {{/each}}
+    </script>
+
+    <!--<script type="text/template" id="temp">-->
+        <!--{{each rows v i}}-->
+        <!--<tr>-->
+            <!--<td>{{(page-1)*size+i+1}}</td>-->
+            <!--<td>{{v.username}}</td>-->
+            <!--<td>{{v.mobile}}</td>-->
+            <!--<td>{{v.isDelete===1?'正常':'禁用'}}</td>-->
+            <!--<td data-id="{{v.id}}">-->
+                <!--{{if v.isDelete === 0}}-->
+                <!--<button class="btn btn-success btn-sm">启用</button>-->
+                <!--{{/if}}-->
+                <!--{{if v.isDelete === 1}}-->
+                <!--<button class="btn btn-danger btn-sm">禁用</button>-->
+                <!--{{/if}}-->
+            <!--</td>-->
+        <!--</tr>-->
+        <!--{{/each}}-->
+    <!--</script>-->
 </body>
 </html>
 
 
+
+
 <script src="lib/jquery/jquery.min.js"></script>
 <script src="lib/bootstrap/js/bootstrap.min.js"></script>
+<script src="lib/artTemplate/template-web.js"></script>
 <script src="lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
+<script src="lib/bootstrap-paginator/bootstrap-paginator.min.js"></script>
 <script src="lib/echarts/echarts.min.js"></script>
 <script src="lib/nprogress/nprogress.js"></script>
 <script src="js/common.js"></script>
-<script src="js/index.js"></script>
+<script src="js/user.js"></script>
