--- a/public/back/second.html
+++ b/public/back/second.html
@@ -135,7 +135,7 @@
 
                         <div class="dropdown">
                             <button id="dLabel" class="btn btn-default " type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                 请选择一级分类
+                                 <span class="categoryname">请选择一级分类</span>
                                 <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="dLabel">
@@ -155,7 +155,7 @@
                         <div class="form-group">
                             <div class="fileupload">
                                 <button class="btn btn-default">上传图片</button>
-                                <input type="file" id="uploadfile" name="pic1" class="btn btn-default">
+                                <input type="file" id="fileupload" data-url="" name="pic1" class="btn btn-default">
                             </div>
                         </div>
                         <div class="form-group img_box">
@@ -203,5 +203,8 @@
 <script src="lib/nprogress/nprogress.js"></script>
 <script src="lib/bootstrap-paginator/bootstrap-paginator.min.js"></script>
 <script src="lib/artTemplate/template-web.js"></script>
+<script src="lib/jquery-fileupload/jquery.ui.widget.js"></script>
+<script src="lib/jquery-fileupload/jquery.iframe-transport.js"></script>
+<script src="lib/jquery-fileupload/jquery.fileupload.js"></script>
 <script src="js/common.js"></script>
 <script src="js/second.js"></script>
