商品搜索完成筛选完成

--- a/public/font/category.html
+++ b/public/font/category.html
@@ -15,9 +15,9 @@
 <div class="container">
     <div class="lt_header">
         <a href="index.html" class="lt_left fl">
-            <span class="fa fa-home"></span>
+            <span class="mui-icon mui-icon-back"></span>
         </a>
-        <a href="index.html" class="lt_right fr">
+        <a href="search.html" class="lt_right fr">
             <span class="fa fa-search"></span>
         </a>
         <h4>乐淘云购</h4>
